syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "EBridge.Contracts.ReceiptMakerContract";

service ReceiptMakerContract {
  rpc GetReceiptCount(aelf.Hash) returns (google.protobuf.Int64Value) {
    option (aelf.is_view) = true;
  }
  rpc GetReceiptHash(GetReceiptHashInput) returns (aelf.Hash) {
    option (aelf.is_view) = true;
  }
  rpc GetReceiptHashList(GetReceiptHashListInput) returns (GetReceiptHashListOutput) {
    option (aelf.is_view) = true;
  }
}

message GetReceiptHashInput {
  aelf.Hash space_id = 1;
  int64 receipt_index = 2;
}

message GetReceiptHashListInput {
  int64 first_leaf_index = 1;
  int64 last_leaf_index = 2;
  aelf.Hash space_id = 3;
}

message GetReceiptHashListOutput {
  repeated aelf.Hash receipt_hash_list = 1;
}